# quoridor

./: .gitignore  README.md  minimax.py  pyproject.toml  quoridor.py
datasets/: d1-1000.pickle  d1-10000-outdated.pickle  d1-10000.pickle
src/quoridor/: competition.py  julia_bot.py  minimax.py  quoridor.py  serializable_board.py  training_data.py
